--- a/scenarioAfr/weather/past_conditions/index_e.html
+++ b/scenarioAfr/weather/past_conditions/index_e.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
 <!--<![endif]--><head>
@@ -185,15 +186,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <section class="panel panel-default">
   <header class="panel-heading">
-    <h2 class="panel-title h4 wxo-dpl-inline">Conditions des dernières 24 heures Unités impériales</h2>
+    <h2 class="panel-title h4 wxo-dpl-inline">Conditions des dernières 24 heures</h2>
     <ul class="list-inline small pull-right hidden-xs" style="margin-top:-7px">
       <li>
-        <a class="toggle-unit btn btn-default" style="display: none;">
-          <abbr title="Convert to Imperial units">Unités impériales</abbr>
+        <a class="toggle-unit btn btn-default">
+          <abbr title="Convertir en unités impériales">Unités impériales</abbr>
         </a>
       </li>
       <li>
-        <a class="toggle-view btn btn-default" style="display: none;">Graphique</a>
+        <a class="toggle-view btn btn-default">Graphique</a>
       </li>
     </ul>
     <div class="visible-xs pull-right">
@@ -1117,57 +1118,57 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </tbody>
       </table>
     </div>
-    <div class="mrgn-lft-md mrgn-rght-md mrgn-tp-sm mrgn-bttm-md">
+     <div class="mrgn-lft-md mrgn-rght-md mrgn-tp-sm mrgn-bttm-md">
       <div class="wb-tabs">
         <div class="tabpanels">
           <details id="details-panel1">
-            <summary>Legend</summary>
-            <div>n/a: not available</div>
-            <div>*: <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=FC34F41B-1#p12">value not significant</a>
-            </div>
-            <p>This table displays weather elements available for this station</p>
-            <div><span class="highTemp">Highest temperature<span class="glyphicon glyphicon-arrow-up extreme-temp"></span></span></div>
-            <div><span class="lowTemp">Lowest temperature<span class="glyphicon glyphicon-arrow-down extreme-temp"></span></span></div>
-            <p>Equal temperature values are all highlighted</p>
-            <p>This is an automated product, generated using preliminary data.</p>
-            <p>If you require additional historical weather information, please visit <a href="http://climate.weather.gc.ca/">Climate</a> website.</p>
+            <summary>Légende</summary>
+            <div>n.d. : non disponible</div>
+            <p>Ce tableau affiche les éléments météo disponibles pour cette station.</p>
+            <div><span class="highTemp">Température la plus élevée<span class="glyphicon glyphicon-arrow-up extreme-temp"></span></span></div>
+            <div><span class="lowTemp">Température la plus basse<span class="glyphicon glyphicon-arrow-down extreme-temp"></span></span></div>
+            <p>Les température égales sont toutes rehaussées.</p>
+            <p>Ceci est un produit automatisé, basé sur des données préliminaires.</p>
+            <p>Si vous désirez plus de données historiques sur les conditions météo, s.v.p. visitez le site Web <a href="http://climat.meteo.gc.ca/">Climat</a>
+            </p>
           </details>
           <details id="details-panel2">
-            <summary>Highlighting criteria</summary>
-            <p>Significant Weather Conditions</p>
-            <p>To highlight potentially dangerous weather conditions the following are displayed in bold characters:</p>
+            <summary>Critères de rehaussement</summary>
+            <p>Conditions météo significatives</p>
+            <p>Afin de rendre plus visibles les conditions météo potentiellement dangereuses, certaines sont rehaussées par des caractères gras :</p>
             <ul>
-              <li>Tornado</li>
-              <li>Funnel Cloud</li>
-              <li>Thunderstorm</li>
-              <li>Lightning</li>
-              <li>Hail</li>
-              <li>Freezing precipitation</li>
-              <li>Heavy precipitation</li>
-              <li>Any other weather condition, if the visibility is <span class="visible-metric">1.0 km</span><span class="visible-imperial wb-inv">0.6 miles</span> or less</li>
+              <li>Tornade</li>
+              <li>Entonnoir nuageux</li>
+              <li>Orage</li>
+              <li>Éclair</li>
+              <li>Foudre</li>
+              <li>Grêle</li>
+              <li>Précipitations verglaçantes</li>
+              <li>Fortes précipitations</li>
+              <li>Toute conditions météo, si la visibilité est de <span class="visible-metric">1,0 km</span><span class="visible-imperial wb-inv">0,6 miles</span> ou moins</li>
             </ul>
-            <p>In addition some weather elements are displayed in bold characters when they reach the following values:</p>
-            <p>Temperatures:</p>
+            <p>De plus certaines données météo sont en gras si elles atteignent une des valeurs suivantes :</p>
+            <p>Températures :</p>
             <ul>
-              <li>Hot: <span class="visible-metric">30.0&deg;C</span><span class="visible-imperial wb-inv">86&deg;F</span> and higher</li>
-              <li> Cold: <span class="visible-metric">-30.0&deg;C</span><span class="visible-imperial wb-inv">-22&deg;F</span> and lower</li>
+              <li>Chaudes : <span class="visible-metric">30,0 &deg;C</span><span class="visible-imperial wb-inv">86 &deg;F</span> et plus</li>
+              <li>Froides : <span class="visible-metric">-30,0 &deg;C</span><span class="visible-imperial wb-inv">-22 &deg;F</span> et moins</li>
             </ul>
-            <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=6C5D4990-1#humidex">Humidex:</a>
+            <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=Fr&amp;n=6C5D4990-1#humidex">Humidex : </a>
             <ul>
-              <li>Values of <span class="visible-metric">35</span><span class="visible-imperial wb-inv">95</span> and more</li>
+              <li><span class="visible-metric">35</span><span class="visible-imperial wb-inv">95</span> et plus</li>
             </ul>
-            <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=92F91891-1">Wind chill</a>
+            <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=Fr&amp;n=92F91891-1">Refroidissement éolien : </a>
             <ul>
-              <li>Values of <span class="visible-metric">-35</span><span class="visible-imperial wb-inv">-31</span> and below</li>
+              <li><span class="visible-metric">-35</span><span class="visible-imperial wb-inv">-31</span> et moins</li>
             </ul>
-            <p>Winds:</p>
+            <p>Vents : </p>
             <ul>
-              <li>Mean speed of <span class="visible-metric">60 km/h</span><span class="visible-imperial wb-inv">37 mph</span> or more</li>
-              <li>Gust speed of <span class="visible-metric">90 km/h</span><span class="visible-imperial wb-inv">56 mph</span> or more</li>
+              <li>Vitesse moyenne de <span class="visible-metric">60 km/h</span><span class="visible-imperial wb-inv">37 mph</span> et plus</li>
+              <li>Rafales de vent de <span class="visible-metric">90 km/h</span><span class="visible-imperial wb-inv">56 mph</span> et plus</li>
             </ul>
-            <p>Visibility:</p>
+            <p>Visibilité : </p>
             <ul>
-              <li><span class="visible-metric">1.0 km</span><span class="visible-imperial wb-inv">0.6 miles</span> or less along with the weather conditions</li>
+              <li><span class="visible-metric">1,0 km</span><span class="visible-imperial wb-inv">0,6 miles</span> et moins ainsi que les conditions météo</li>
             </ul>
           </details>
         </div>
@@ -1224,22 +1225,23 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="row pagedetails">
    <div class="col-sm-5 col-xs-12 datemod">
       <dl id="wb-dtmd">
-         <dt>Date modified:&#32;</dt>
+         <dt>Date de modification&#160;:&#32;</dt>
          <dd><time property="dateModified">2017-09-05</time></dd>
       </dl>
-   </div>
+  </div>
    <div class="clear visible-xs"></div>
-   <div class="col-sm-4 col-xs-6"><a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a></div>
+   <div class="col-sm-4 col-xs-6"><a href="/mainmenu/contact_us_f.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Rétroaction<span class="wb-inv"> sur ce site Web</span></a></div>
    <div class="col-sm-3 col-xs-6 text-right">
       <div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default"}'></div>
    </div>
    <div class="clear visible-xs"></div>
 </div>
+
 </main>
 <aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
+<h2>Activit&eacute;s et initiatives du gouvernement du Canada</h2>
 <div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
-<p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
+<p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Acc&eacute;dez aux activit&eacute;s et initiatives du gouvernement du Canada</a></p>
 </div></aside>
 <footer role="contentinfo" id="wb-info">
    <nav role="navigation" class="container wb-navcurr">
@@ -1259,21 +1261,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <div class="brand">
    <div class="container">
       <div class="row ">
-         <nav class="col-md-10 ftr-urlt-lnk">
-            <h2 class="wb-inv">About this site</h2>
-            <ul>
-               <li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
-               <li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-               <li><a href="https://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
-               <li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
-               <li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
-            </ul>
-         </nav>
+        <nav class="col-md-10 ftr-urlt-lnk">
+<h2 class="wb-inv">À propos du site</h2>
+<ul>
+<li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
+<li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
+<li><a href="https://www1.canada.ca/fr/nouveausite.html">À propos de Canada.ca</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
+</ul>
+</nav>
+
          <div class="col-xs-6 visible-sm visible-xs tofpg">
-            <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
+            <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
          </div>
          <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="/template/gcweb/v4.0.24/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+            <object type="image/svg+xml" tabindex="-1" role="img" data="../../weather/template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
          </div>
       </div>
    </div>
