--- a/scenarioTfr/weather/lightning/index_e.html
+++ b/scenarioTfr/weather/lightning/index_e.html
@@ -343,7 +343,7 @@
 	<details>
 		<summary>Foudre - Canada</summary>
 		<ul>
-			<li><a title="Carte de la foudre du Canada" href="index_f.html?id=NAT#mapTop">Canada</a></li>
+			<li><a title="Carte de la foudre du Canada" href="../../weather/lightning/index_e.html">Canada</a></li>
 			<li><a title="Carte de la foudre de l'Arctique" href="index_f.html?id=ARC#mapTop">Arctique</a></li>
 			<li><a title="Carte de la foudre du Pacifique" href="index_f.html?id=PAC#mapTop">Pacifique</a></li>
 			<li><a title="Carte de la foudre des Prairies" href="index_f.html?id=WRN#mapTop">Prairies</a></li>
