--- a/scenarioTfr/weather/radar/index_e.html
+++ b/scenarioTfr/weather/radar/index_e.html
@@ -778,39 +778,25 @@
 	</div>
 </section>
 
+<div class="row pagedetails">
    <div class="col-sm-5 col-xs-12 datemod">
       <dl id="wb-dtmd">
-         <dt>Date modified:&#32;</dt>
-         <dd><time property="dateModified">2017-05-25</time></dd>
+         <dt>Date de modification :&#32;</dt>
+         <dd><time property="dateModified">2017-07-21</time></dd>
       </dl>
    </div>
    <div class="clear visible-xs"></div>
-   <div class="col-sm-4 col-xs-6"><a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a></div>
+   <div class="col-sm-4 col-xs-6">
+      <a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Rétroaction<span class="wb-inv"> sur ce site Web</span></a>
+   </div>
    <div class="col-sm-3 col-xs-6 text-right">
       <div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default"}'></div>
    </div>
    <div class="clear visible-xs"></div>
 </div>
+
 </main>
-<aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
-<p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
-</div></aside>
-<footer role="contentinfo" id="wb-info">
-   <nav role="navigation" class="container wb-navcurr">
-      <h2 class="wb-inv">About government</h2>
-      <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-   <li><a href="/mainmenu/contact_us_e.html">Contact us</a></li>
-   <li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-   <li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
-   <li><a href="http://news.gc.ca/">News</a></li>
-   <li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
-   <li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
-   <li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
-   <li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
-   <li><a href="http://open.canada.ca/en/">Open government</a></li>
-</ul>
+
    </nav>
    <div class="brand">
    <div class="container">
