--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -256,14 +256,14 @@
             <dl class="dl-horizontal mrgn-bttm-0 hidden-xs wxo-conds-tmp mrgn-tp-sm">
               <dt>Enregistrées à :</dt>
               <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
-              <dt>Date: </dt>
+              <dt>Date : </dt>
               <dd class="mrgn-bttm-0">14h00 HAE le dimanche 1 janvier 2017</dd>
             </dl>
             <div class="row no-gutters wb-eqht brdr-tp">
               <div class="col-sm-4 brdr-rght-city">
                 <dl class="dl-horizontal wxo-conds-col1">
-                  <dt>Condition:</dt>
-                  <dd class="mrgn-bttm-0">Neige</dd>
+                  <dt>Condition :</dt>
+                  <dd class="mrgn-bttm-0">Poudrerie basse</dd>
                   <dt>Pression :</dt>
                   <dd class="mrgn-bttm-0 wxo-metric-hide">101,4 <abbr title="kilopascals">kPa</abbr>
                   </dd>
@@ -388,7 +388,7 @@
           <h2>Conditions actuelles</h2>
         </summary>
         <div class="row">
-          <div class="col-xs-6"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/25.gif" alt="Neige" title="Neige"><p class="visible-xs text-center">Neige</p>
+          <div class="col-xs-6"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/25.gif" alt="Poudrerie basse" title="Poudrerie basse"><p class="visible-xs text-center">Poudrerie basse</p>
           </div>
           <div class="col-xs-6">
             <div>
@@ -434,12 +434,12 @@
           <dl class="dl-horizontal mrgn-bttm-lg wxo-conds-xs">
             <dt>Enregistrées à :</dt>
             <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
-            <dt>Date: </dt>
+            <dt>Date : </dt>
             <dd class="mrgn-bttm-0">14h00 HAE le dimanche 1 janvier 2017</dd>
           </dl>
           <dl class="dl-horizontal wxo-conds-xs ">
-            <dt>Condition:</dt>
-            <dd class="mrgn-bttm-0">Neige</dd>
+            <dt>Condition :</dt>
+            <dd class="mrgn-bttm-0">Poudrerie basse</dd>
             <dt>Pression :</dt>
             <dd class="mrgn-bttm-0 wxo-metric-hide">101,4 <abbr title="kilopascals">kPa</abbr>
             </dd>
