--- a/scenarioAfr/weather/past_conditions/index_e.html
+++ b/scenarioAfr/weather/past_conditions/index_e.html
@@ -147,16 +147,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</header>
 	<div class="modal-body">
 	
-                                <li><a href="../../../weather/canada_e.html">Météo au Canada</a></li>
-                                <li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
-                                <li><a href="../../../weather/satellite/index_e.html">Satellite - Canada</a></li>
+                                <li><a href="../../weather/canada_e.html">Météo au Canada</a></li>
+                                <li><a href=".../../weather/radar/index_e.html">Radar - Canada</a></li>
+                                <li><a href="../../weather/satellite/index_e.html">Satellite - Canada</a></li>
                                 <li><a href="#">Maritime - Canada</a></li>
-                                <li><a href="../../../weather/mainmenu/airquality_menu_e.html">Qualité de l'air</a></li>
+                                <li><a href="../../weather/mainmenu/airquality_menu_e.html">Qualité de l'air</a></li>
                                 <li><a href="#">Service canadien des glaces</a></li>
                                 <li><a href="#">Prévisions saisonnières</a></li>
                                 <li><a href="#">Prévisions à long terme</a></li>
-                                <li><a href="../../../weather/warnings/index_e.html">Alertes météo publiques - Canada</a></li>
-                                <li><a href="../../../weather/lightning/index_e.html">Foudre</a></li>
+                                <li><a href="../../weather/warnings/index_e.html">Alertes météo publiques - Canada</a></li>
+                                <li><a href="../../weather/lightning/index_e.html">Foudre</a></li>
                                 <li><a href="#">Ouragans</a></li>
                                 <li><a href="#">Résumés météorologiques</a></li>
                                 <li><a href="#">Conditions météorologiques dangereuses</a></li>
@@ -181,7 +181,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   
     <p>Latitude 45.32&deg; N | 
             
-                    Longitude 75.67&deg; W
+                    Longitude 75.67&deg; O
                 </p>
 
 <section class="panel panel-default">
