--- a/scenarioTfr/weather/lightning/ONT-index_e.html
+++ b/scenarioTfr/weather/lightning/ONT-index_e.html
@@ -165,16 +165,16 @@
 	</header>
 	<div class="modal-body">
 	
-                                <li><a href="../../../weather/canada_e.html">Météo au Canada</a></li>
-                                <li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
-                                <li><a href="../../../weather/satellite/index_e.html">Satellite - Canada</a></li>
+                                <li><a href="../../weather/canada_e.html">Météo au Canada</a></li>
+                                <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
+                                <li><a href="../../weather/satellite/index_e.html">Satellite - Canada</a></li>
                                 <li><a href="#">Maritime - Canada</a></li>
-                                <li><a href="../../../weather/mainmenu/airquality_menu_e.html">Qualité de l'air</a></li>
+                                <li><a href="../../weather/mainmenu/airquality_menu_e.html">Qualité de l'air</a></li>
                                 <li><a href="#">Service canadien des glaces</a></li>
                                 <li><a href="#">Prévisions saisonnières</a></li>
                                 <li><a href="#">Prévisions à long terme</a></li>
-                                <li><a href="../../../weather/warnings/index_e.html">Alertes météo publiques - Canada</a></li>
-                                <li><a href="../../../weather/lightning/index_e.html">Foudre</a></li>
+                                <li><a href="../../weather/warnings/index_e.html">Alertes météo publiques - Canada</a></li>
+                                <li><a href="../../weather/lightning/index_e.html">Foudre</a></li>
                                 <li><a href="#">Ouragans</a></li>
                                 <li><a href="#">Résumés météorologiques</a></li>
                                 <li><a href="#">Conditions météorologiques dangereuses</a></li>
