--- a/scenarioTfr/weather/lightning/index_e.html
+++ b/scenarioTfr/weather/lightning/index_e.html
@@ -146,7 +146,7 @@
 
 <div class="container hidden-print">
 
-<span class='pull-right profile-link'><a href='/myprofile/index_e.html'> </a></span>
+<span class='pull-right profile-link'><a href='/myprofile/index_e.html'></a></span>
 	<a href="#weather-shortcuts" class="overlay-lnk pull-right btn btn-default" aria-controls="mid-screen" role="button">Sujets météorologiques</a>
 	<span id="wxo-divider" class="pull-right wb-invisible">|&#160;</span>
 	<form class="mrgn-rght-sm pull-right" role="search" id="cityjump" method="GET" action="">
@@ -188,8 +188,8 @@
 	</div>
 	</div>
 </section>
-
-
+</div>
+	
 <div class="clearfix"></div>
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
