--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -682,13 +682,13 @@
                       <strong title="dimanche">Aujourd'hui</strong>
                     </a>
                   </td>
-                  <td>Généralement nuageux. Neige intermittente. Maximum -2.</td>
+                  <td>Généralement nuageux. Neige intermittente. Maximum moins 2.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="Sunday night">Ce soir et cette nuit</strong>
                   </td>
-                  <td>Passages nuageux avec neige. Minimum -6.</td>
+                  <td>Passages nuageux avec neige. Minimum moins 6.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -700,7 +700,7 @@
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="lundi soir"> Nuit</td>
-                  <td>Pluie verglaçante intermittente mêlé de neige. Minimum -5.</td>
+                  <td>Pluie verglaçante intermittente mêlé de neige. Minimum moins 5.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -708,11 +708,11 @@
                       <abbr title="mardi">Mar</abbr>, 3 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Pluie verglaçante intermittente mêlé de pluie. Maximum 3.</td>
+                  <td>Pluie verglaçante intermittente mêlé de pluie. Maximum plus 3.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="mardi soir"> Nuit </td>
-                  <td>Pluie intermittente ou neige. Minimum -1.</td>
+                  <td>Pluie intermittente ou neige. Minimum moins 1.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -720,11 +720,11 @@
                       <abbr title="mercredi">Merc</abbr>, 4 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Maximun -2.</td> 
+                  <td>Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Maximun moins 2.</td> 
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="merc soir"> Nuit</td>
-                  <td>Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Minimum -15.</td>
+                  <td>Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Minimum moins 15.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -732,11 +732,11 @@
                       <abbr title="jeudi">Jeu</abbr>, 5 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum -9.</td>
+                  <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum moins 9.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="jeudi night"> Nuit</td>
-                  <td>Nuageux avec 30 pour cent de probabilité d'averses de neige ou de pluie. Minimum -18.</td>
+                  <td>Nuageux avec 30 pour cent de probabilité d'averses de neige ou de pluie. Minimum moins 18.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -744,7 +744,7 @@
                       <abbr title="vendredi">Ven</abbr>, 6 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum -12.</td>
+                  <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum moins 12.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="vendredi night"> Nuit</td>
@@ -795,7 +795,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Neige intermittente. Maximum -2.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Neige intermittente. Maximum moins 2.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/38.gif" alt="Neige" class="pull-right" title="Neige"></div>
@@ -807,7 +807,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">	Passages nuageux avec neige. Minimum -6.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Passages nuageux avec neige. Minimum moins 6.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Neige" class="pull-right" title="Neige"></div>
@@ -825,7 +825,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
-              <strong> Nuit : </strong>Pluie verglaçante intermittente mêlé de neige. Minimum -5.</div>
+              <strong> Nuit : </strong>Pluie verglaçante intermittente mêlé de neige. Minimum moins 5.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/14.gif" alt="Pluie verglaçante intermittente mêlé de pluie" class="pull-right" title="Pluie verglaçante intermittente mêlé de pluie"></div>
@@ -839,11 +839,11 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Pluie verglaçante intermittente mêlé de pluie. Maximum 3.</div>
+            <div class="col-xs-12">Pluie verglaçante intermittente mêlé de pluie. Maximum plus 3.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
-              <strong> Nuit : </strong> Pluie intermittente ou neige. Minimum -1.</div>
+              <strong> Nuit : </strong> Pluie intermittente ou neige. Minimum moins 1.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Possibilité d'averses de neige ou de pluie" class="pull-right" title="Possibilité d'averses de neige ou de pluie"></div>
@@ -857,11 +857,11 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Maximun -2.</div>
+            <div class="col-xs-12">Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Maximun moins 2.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
-              <strong> Nuit : </strong> Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Minimum -15.</div>
+              <strong> Nuit : </strong> Nuageux avec 40 pour cent de probabilité d'averses de neige ou de pluie. Minimum moins 15.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Possibilité d'averses de neige ou de pluie" class="pull-right" title="Possibilité d'averses de neige ou de pluie"></div>
@@ -879,7 +879,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
-              <strong> Nuit : </strong>Nuageux avec 30 pour cent de probabilité d'averses de neige ou de pluie. Minimum -18.</div>
+              <strong> Nuit : </strong>Nuageux avec 30 pour cent de probabilité d'averses de neige ou de pluie. Minimum moins 18.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Possibilité d'averses de neige ou de pluie" class="pull-right" title="Possibilité d'averses de neige ou de pluie"></div>
@@ -911,7 +911,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Ensoleillé. Maximum -11.</div>
+            <div class="col-xs-12">Ensoleillé. Maximum moins 11.</div>
           </div>
         </section>
         <div class="mrgn-tp-sm mrgn-btm-sm brdr-tp">
