--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -748,7 +748,7 @@
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="vendredi night"> Nuit</td>
-                  <td>Dégagé. Minimum -19.</td>
+                  <td>Dégagé. Minimum moins 19.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -756,7 +756,7 @@
                       <abbr title="samedi">Sam</abbr>, 7 <abbr title="January">jan</abbr>
                     </strong>
                   </td>
-                  <td>Ensoleillé. Maximum -11.</td>
+                  <td>Ensoleillé. Maximum moins 11.</td>
                 </tr>
               </tbody>
             </table>
@@ -893,11 +893,11 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum -12.</div>
+            <div class="col-xs-12">Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses de neige ou de pluie. Maximum moins 12.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
-              <strong> Nuit : </strong> Dégagé. Minimum -19.</div>
+              <strong> Nuit : </strong> Dégagé. Minimum moins 19.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/00.gif" alt="Ensoleillé" class="pull-right" title="Ensoleillé"></div>
