--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -186,7 +186,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">SEVERE THUNDERSTORM WATCH IN EFFECT</a></h2></div>
+  <div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">AVERTISSEMENT D'UN VIOLENT ORAGE EN VIGUEUR</a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
