--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -186,7 +186,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">AVERTISSEMENT D'UN VIOLENT ORAGE EN VIGUEUR</a></h2></div>
+  <div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">VEILLE D'ORAGES VIOLENTS EN VIGUEUR</a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
@@ -663,13 +663,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <strong title="jeudi">Aujourd'hui</strong>
                     </a>
                   </td>
-                  <td>Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'un violent orage. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25. Indice UV de 3 ou modéré.</td>  
+                  <td>Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25. Indice UV de 3 ou modéré.</td>  
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="jeudi soir">Ce soir et cette nuit</strong>
                   </td>
-                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'un violent orage. Vents du sud-ouest de 20 km/h devenant légers ce soir.  Minimum 12.</td>
+                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h devenant légers ce soir.  Minimum 12.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -677,7 +677,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <abbr title="ven">ven</abbr>, 25 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
-                  <td>Alternance de soleil et de nuages. 40 pour cent de probabilité d'averses cet après-midi avec risque d'un orage. Maximum 20.</td>
+                  <td>Alternance de soleil et de nuages. 40 pour cent de probabilité d'averses cet après-midi avec risque d'orages. Maximum 20.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="ven soir"> Nuit</td>
@@ -777,7 +777,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'un violent orage. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Généralement nuageux. Pluie intermittente ou d'orages cet après-midi. Risque d'orages violents. Vents devenant du sud-ouest à 20 km/h cet après-midi. Maximum 21. Humidex 25.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
@@ -789,7 +789,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'un violent orage. Vents du sud-ouest de 20 km/h devenant légers ce soir. Minimum 12.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h devenant légers ce soir. Minimum 12.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Possibilité d'averses" class="pull-right" title="Possibilité d'averses"></div>
@@ -803,7 +803,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Alternance de soleil et de nuages. 40 pour cent de probabilité d'averses cet après-midi avec risque d'un orage. Maximum 20.</div>
+            <div class="col-xs-12">Alternance de soleil et de nuages. 40 pour cent de probabilité d'averses cet après-midi avec risque d'orages. Maximum 20.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
