--- a/scenarioTfr/weather/warnings/ottawa-report_e.html
+++ b/scenarioTfr/weather/warnings/ottawa-report_e.html
@@ -125,7 +125,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<ol class="breadcrumb">
 		<li><a href="../../weather/en.html">Accueil</a></li><li><a href="../../weather/services/environment.html">Environnement et ressources naturelles</a></li><li><a href="../../weather/index_e.html">Information météo</a></li>
 <li><a href="../../weather/mainmenu/alert_menu_e.html">Alertes</a></li>
-<li><a href="../../weather/canada_e.html">Avertissements, veilles et bulletins</a></li>
+<li><a href="../../weather/warnings/index_e.html">Avertissements, veilles et bulletins</a></li>
 <li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - sud</a></li>
 		</ol>
 	</div>
