--- a/scenarioAfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioAfr/weather/forecast/hourly/on-118_metric_e.html
@@ -223,7 +223,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -238,7 +238,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -253,7 +253,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -268,7 +268,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -283,7 +283,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -298,7 +298,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -313,7 +313,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -328,7 +328,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -346,7 +346,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -361,7 +361,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -376,7 +376,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -391,7 +391,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -406,7 +406,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 30<br />
-									rafale 50</td>
+									rafales 50</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -421,7 +421,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -436,7 +436,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -451,7 +451,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -466,7 +466,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -481,7 +481,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -496,7 +496,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">
           <abbr title="Value not significant">*</abbr>
         </td>
@@ -511,7 +511,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">26</td>
       </tr>
       <tr>
@@ -524,7 +524,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
@@ -537,7 +537,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">28</td>
       </tr>
       <tr>
@@ -550,7 +550,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
@@ -563,7 +563,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">Nulle</td>
         <td headers="header5" class="text-center">
           <abbr title="Southwest">SO</abbr> 20<br />
-									rafale 40</td>
+									rafales 40</td>
         <td headers="header6" class="text-center">28</td>
       </tr>
     </tbody>
