--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -1109,7 +1109,7 @@
 <div class="row hidden-print">
   <div class="col-sm-8 hidden-xs">
     <section class="followus">
-      <h2>Follow:</h2>
+      <h2>Suivez :</h2>
       <ul class="list-inline mrgn-tp-lg">
         <li>
           <a href="/rss/city/on-118_e.xml"><img src="../../../weather/cacheable/images/img/feed-icon-14x14.png" alt="Atom feed" class="mrgn-rght-sm">Weather</a>
